<resources>
    <string name="app_name">Muda-T</string>
    <!-- Strings related to login -->
    <string name="slogan">"Estamos Especializados en Transportar tus  Mejores Momentos</string>
    <string name="boton_iniciar">Iniciar sesión</string>
    <string name="boton_registro">Registrarme</string>
    <string name="registrate">"Registrate</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="proof">XD</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_register">registerActivity</string>
    <string name="title_activity_tab_navigate">tabNavigate</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Account</string>
    <string name="title_activity_navigate">NavigateActivity</string>
    <string name="title_activity_main">MainActivity</string>
</resources>