<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@color/azul"
        android:textSize="65dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Bienvenido a Muda-T"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Frase inspiradora"
        android:textAlignment="center"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/azul"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn1"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:background="@drawable/round_btn"
        android:text="@string/boton_iniciar"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_btn2"
        android:text="@string/boton_registro"
        android:textAlignment="center"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textAlignment="center" />

</LinearLayout>