<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="598dp"
        android:layout_height="280dp"
        android:contentDescription="@string/nav_header_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/inicio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="300dp"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/boton_iniciar"
            android:textAlignment="textStart"
            android:textColor="@color/azul_fuerte_texto"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingTop="5dp"
            android:text="Es un gusto tenerte de vuelta"
            android:textAlignment="textStart"
            android:textColor="@color/azul_fuerte_texto"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:paddingTop="5dp"
            android:text="Ingresa tus datos corectamente"
            android:textAlignment="textStart"
            android:textColor="@color/azul_fuerte_texto"
            android:textSize="20sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_usuario"
                android:hint="   @string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:singleLine="false"
                android:textColorLink="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_password"
                android:drawableRight="@drawable/ic_ojo"
                android:hint="   @string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </android.support.constraint.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/login"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Iniciar sesión"
                android:background="@drawable/round_btn"
                android:textColor="@color/white"
                 />

            <Button
                android:id="@+id/login_gogle"
                android:layout_width="300dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Iniciar sesión"
                android:drawableLeft="@drawable/ic_google"
                android:background="@drawable/round_btn2"
                android:textColor="@color/azul_fuerte_texto"
                 />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿No tienes cuenta?"
                android:textSize="25sp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                ></TextView>
            <TextView
                android:id="@+id/redirect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="   Registrate"
                android:gravity="fill_vertical"
                android:background="@drawable/round_btn2"
                android:textColor="@color/azul"
                android:fontFamily="sans-serif-black"
                ></TextView>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>


